# python_mermaid

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml  typing.yml
examples/: README.md  daily_activity.py  framasoft.py  the_march_family.py
python_mermaid/: __init__.py  diagram.py  interaction.py  link.py  mermaid.py  node.py  utils.py  utils_unit_tests.py
tests/: test_diagram.py  test_link.py  test_node.py  utils.py
tests/diagram_files/: diagram_without_title
tests/graph/: test_diagram.py  test_interaction.py  test_node.py  utils.py
tests/graph/diagram_files/: diagram_with_interactions  diagram_with_one_node  diagram_with_subgraphs  diagram_without_title  simple_diagram
tests/snakeCase/: test_snake_case.py
tests/stateDiagram/: test_diagram.py  test_link.py  test_node.py  utils.py
tests/stateDiagram/diagram_files/: diagram_with_long_comment  diagram_with_multiple_nodes  diagram_with_nodes_and_links  diagram_with_one_node  diagram_with_short_comment  diagram_with_start_end_nodes  diagram_without_title  simple_diagram
