[tool.poetry]
name = "python_mermaid"
version = "0.1.2"
description = ""
authors = ["Dynnammo <contact@dynnammo.com>"]
readme = "README.md"
packages = [{include = "python_mermaid"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
