[tool.poetry]
name = "python_mermaid"
version = "0.1.5"
description = "A (quite) simple that helps creating on-the-fly Mermaid diagrams"
authors = ["Dynnammo <contact@dynnammo.com>"]
readme = "README.md"
packages = [{include = "python_mermaid"}]

[tool.poetry.dependencies]
python = "^3.10"
Unidecode = "^1.3.6"
pre-commit = "^4.2.0"
mypy = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.291"

[tool.poetry.scripts]

[tool.ruff]
exclude = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
